cmake_minimum_required(VERSION 4.0)
project(Clion C)

set(CMAKE_C_STANDARD 99)

add_executable(Clion
        Chapter2/two_func.c
        Chapter2/nogood.c
        Chapter2/homework.c
        Chapter3/platinum.c
        Chapter3/print1.c
        Chapter3/bases.c
        Chapter3/toobig.c
        Chapter3/print2.c
        Chapter3/charcode.c
        Chapter3/altnames.c
        Chapter3/showf_pt.c
        Chapter3/floaterr.c
        Chapter3/typesize.c
        Chapter3/badcount.c
        Chapter3/escape.c
        Chapter4/talkback.c
        Chapter3/homework.c
        Chapter3/homework3_11_1.c
        Chapter3/homework3_11_2.c
        Chapter3/homework3_11_3.c
        Chapter3/homework3_11_4.c
        Chapter3/homework3_11_5.c
        Chapter3/homework3_11_6.c
        Chapter3/homework3_11_7.c
        Chapter3/homework3_11_8.c
        Chapter4/prasie1.c
        Chapter4/praise2.c
        Chapter4/pizza.c
        Chapter4/defines.c
        Chapter4/printout.c
        Chapter4/width.c
        Chapter4/floats.c
        Chapter4/flags.c
        Chapter4/stringf.c
        Chapter4/intconv.c
        Chapter4/floatcnv.c
        Chapter4/prntval.c
        Chapter4/longstrg.c
        Chapter4/input.c
        Chapter4/varwid.c
        Chapter4/skiptwo.c
        Chapter4/homework02.c
        Chapter4/homework04.c
        C_Project/2.11.c
        chapter0/2.11.c
        Chapter4/homework05.c
        Chapter4/homework06.c
        Chapter4/homework07.c
        Chapter4/homework08.c
        Chapter4/homework09.c
        Chapter4/homework011.c
        Chapter4/homework1.c
        Chapter4/homework2.c
        Chapter4/homework3.c
        Chapter4/homework4.c
        Chapter4/homework5.c
        Chapter4/homework6.c
        Chapter4/homework7.c
        Chapter4/homework8.c
        Chapter4/Chapter5/11.c
        Chapter5/shoes1.c
        Chapter5/shoes2.c
        Chapter5/golf.c
        Chapter5/squares.c
        Chapter5/wheat.c
        Chapter5/divide.c
        Chapter5/rules.c
        Chapter5/sizeof.c
        Chapter5/min_sec.c
        Chapter5/add_one.c
        Chapter5/post_pre.c
        Chapter5/bottles.c
        Chapter5/addemup.c
        Chapter5/convert.c
        Chapter5/pound.c
        Chapter5/running.c
        Chapter5/homework01.c
        Chapter5/homework04.c
        Chapter5/homework05.c
        Chapter5/homework06.c
        Chapter5/homework07.c
        Chapter5/homework08.c
        Chapter5/homework10.c
        Chapter5/homework11.c
        Chapter5/homework012.c
        Chapter5/homework1.c
        Chapter5/homework2.c
        Chapter5/homework3.c
        Chapter5/homework4.c
        Chapter5/homework5.c
        Chapter5/homework6.c
        Chapter5/homework7.c
        Chapter5/homework8.c
        Chapter5/homework9.c
        Chapter6/summing.c
        Chapter6/when.c
        Chapter6/while1.c
        "Chapter6/while 2.c"
        Chapter6/cmplt.c
        Chapter6/t_and_f.c
        Chapter6/truth.c
        Chapter6/trouble.c
        Chapter6/boolean.c
        Chapter6/10sweetie1.c
        Chapter6/11sweetie2.c
        Chapter6/12for_cube.c
        Chapter6/for_show.c
        Chapter6/13postage.c
        Chapter6/14zeno.c
        Chapter6/15do_while.c
        Chapter6/16entry.c
        Chapter6/17rows1.c
        Chapter6/18rows2.c
        Chapter6/19scores_in.c
        Chapter6/20power.c
        Chapter6/homework1.c
        Chapter6/homework2.c
        Chapter6/homework3.c
        Chapter6/homework4.c
        Chapter6/homework5.c
        Chapter6/homework6.c
        Chapter6/homework7.c
        Chapter6/homewort7_2.c
        Chapter6/homework8_a.c
        Chapter6/homework8_b.c
        Chapter6/homework8_c.c
        Chapter6/homework8_d.c
        Chapter6/homework9.c
        Chapter6/homework11.c
        Chapter6/homework14.c
        Chapter6/homework01.c
        Chapter6/homework02.c
        Chapter6/homework03.c
        Chapter6/homework04.c
        Chapter6/homework05.c
        Chapter6/homework06.c
        Chapter6/homework07.c
        Chapter6/homework08.c
        Chapter6/homework09.c
        Chapter6/homework010.c
        Chapter6/homework011.c
        Chapter6/homework012.c
        Chapter6/homework013.c
        Chapter6/homework014.c
        Chapter6/homework015.c
        Chapter6/homework016.c
        Chapter6/homework017.c
        Chapter6/homework018.c
        Chapter7/1colddays.c
        Chapter7/2cypher1.c
        Chapter7/3cypher2.c
        Chapter7/4electric.c
        Chapter7/5divisors1.c
        Chapter7/5divisors2.c
        Chapter7/6chount.c
        Chapter7/7wordcnt.c
        Chapter7/8paint.c
        Chapter7/9skippart.c
        Chapter7/10break.c
        Chapter7/11animals.c
        Chapter7/12vowels.c
)
